--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "seed": "node utils/seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,5 +22,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongoose": "^6.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
